# ciph-lang

./: .clang-format  .clang-tidy  .suppress.cppcheck  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: grammar.md  instruction_set.md
docs/dev_log/: entry_beginning.md
source/: lib.cpp
source/compiler/: CMakeLists.txt  source_list.cmake
source/compiler/inc/: ast.hpp  code_generator.hpp  error_defines.hpp  error_reporter.hpp  lexar.hpp  lexar_defines.hpp  parser.hpp
source/compiler/src/: ciph_compiler.cpp  code_generator.cpp  lexar.cpp  parser.cpp
source/shared/: CMakeLists.txt  source_list.cmake
source/shared/inc/: disassembler.hpp  shared_defines.hpp
source/shared/src/: disassembler.cpp  shared_lib.cpp
source/vm/: CMakeLists.txt  source_list.cmake
source/vm/inc/: execution_context.hpp  instructions.hpp  memory.hpp  processing_unit.hpp  virtual_machine.hpp
source/vm/src/: ciph_vm.cpp  instructions.cpp  processing_unit.cpp  virtual_machine.cpp
test/: CMakeLists.txt
test/source/compiler_tests/: code_generator_tests.cpp  lexar_tests.cpp  parser_tests.cpp  source_list.cmake  tests_code_generator.cpp  tests_lexar.cpp  tests_parser.cpp
test/source/vm_tests/: instructions_tests.cpp  source_list.cmake  test_processing_unit.cpp  tests_instructions.cpp  tests_processing_unit.cpp  tests_virtual_machine.cpp  virtual_machine_tests.cpp
